--- a/app/views/comics/edit.html.erb
+++ b/app/views/comics/edit.html.erb
@@ -1,5 +1,14 @@
 <h1>Edit Existing Article</h1>
 
+<% if @comic.errors.any? %> 
+  <h2>The following errors prevented the comic from being updated</h2>
+  <% @comic.errors.full_messages.each do |msg| %>
+    <ul>
+      <li><%= msg %></li>
+    </ul>  
+  <% end %> 
+<% end %> 
+
 <%= form_with model: @comic do |f| %>
   <%= f.text_field :series_title, placeholder: "Series Title" %>
   <br><br>
