added comics form partial

--- a/app/views/comics/edit.html.erb
+++ b/app/views/comics/edit.html.erb
@@ -1,25 +1,3 @@
 <h1>Edit Existing Article</h1>
 
-<% if @comic.errors.any? %> 
-  <h2>The following errors prevented the comic from being updated</h2>
-  <% @comic.errors.full_messages.each do |msg| %>
-    <ul>
-      <li><%= msg %></li>
-    </ul>  
-  <% end %> 
-<% end %> 
-
-<%= form_with model: @comic do |f| %>
-  <%= f.text_field :series_title, placeholder: "Series Title" %>
-  <br><br>
-  <%= f.text_field :issue_number, placeholder: "Issue Number" %>
-  <br><br>
-  <%= f.text_field :quantity_owned, placeholder: "Quantity Ownded" %>
-  <br><br>
-  <%= f.text_field :condition, placeholder: "Condition" %>
-  <br><br>
-  <%= f.label :anonymous %>
-  <%= f.check_box :anonymous %>
-  <br><br>
-  <%= f.submit "Create Comic" %>
-<% end %>
+<%= render 'form' %>
