--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -1,3 +1,8 @@
-<div>
-  <h1 class="comic-font">Comic Book Room</h1>
+<h1 class="comic-font center">Comic Book Room</h1>
+
+<div class="center jumbotron">
+  <%= link_to 'Sign Up Now', "#"  %>
+  <br><br>
+  <%= link_to 'Log In', "#" %>
 </div>
+
