--- a/app/views/comics/edit.html.erb
+++ b/app/views/comics/edit.html.erb
@@ -1,3 +1,12 @@
-<h1>Edit Existing Article</h1>
+<h1 class="comic-font center">Edit Existing Comic</h1>
+
+<% if @comic.errors.any? %> 
+  <h2>Errors</h2>
+  <ul>
+    <% @comic.errors.full_messages.each do |msg| %>
+      <li><%= msg %></li> 
+    <% end %> 
+  </ul>
+<% end %> 
 
 <%= render 'form' %>
