--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -1,8 +1,7 @@
-<h1 class="comic-font center">Comic Book Room</h1>
-
 <div class="center jumbotron">
-  <%= link_to 'Sign Up Now', "#"  %>
+  <h2 class="comic-font"> Comic Book Room</h2>
   <br><br>
-  <%= link_to 'Log In', "#" %>
+  <%= link_to 'Log In', root_path, class: "btn btn-outline-dark btn-lg" %>
+  <br><br>
+  <%= link_to 'Sign Up', root_path, class: "btn btn-outline-dark btn-lg" %>
 </div>
-
