--- a/app/views/comics/show.html.erb
+++ b/app/views/comics/show.html.erb
@@ -1,3 +1,3 @@
 <h1 class="comic-font center"><%= @comic.series_title %> : <%= @comic.issue_number %></h1>
 
-<p><%= link_to 'Edit', edit_comic_path(@comic) %> | <%= link_to 'Back to Comics Index', comics_path %></p> 
+<p><%= link_to 'Edit', edit_comic_path(@comic) %> | <%= link_to 'Back to Comics Index', comics_path %> | <%= link_to 'Delete', comic_path(@comic), method: :delete, data: {confirm: "are you sure you want to delete this comic?"} %></p> 
