--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,14 +18,15 @@
   <body>
 
     <%= render 'layouts/navigation' %>
-  
-    <% flash.each do |name, msg| %>
-      <ul>
-        <li><%= msg %> 
-      </ul>
+    <%= render 'layouts/messages' %>
+
+    <% if action_name === "home" %>
+      <body class="home-body">
     <% end %>
 
-    <%= yield %>
+    <div class="container">
+      <%= yield %>
+    </div>
 
   </body>
 </html>
