--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -9,15 +9,19 @@
 .home-body {
   background-image: asset-url('background.jpg');
   background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .jumbotron {
   margin-top: 100px;
-  background-color: white;
   width: 450px;
   height: 450px;
 }
 
 .remove-underline {
   text-decoration: none;
+}
+
+#colors {
+  background-color: rebeccapurple;
 }
