--- a/app/views/comics/_form.html.erb
+++ b/app/views/comics/_form.html.erb
@@ -7,20 +7,57 @@
   </ul>
 <% end %>
 
-<%= form_with model: @comic do |f| %>
-  <%= f.text_field :series_title, placeholder: "Series Title" %>
-  <br><br>
-  <%= f.text_field :issue_number, placeholder: "Issue Number" %>
-  <br><br>
-  <%= f.text_field :quantity_owned, placeholder: "Quantity Owned" %>
-  <br><br>
-  <%= f.text_field :condition, placeholder: "Condition" %>
-  <br><br>
-  <%= f.label :anonymous %>
-  <%= f.check_box :anonymous %>
-  <br><br>
-  <%= f.submit "Create Comic" %>
-<% end %>
+<div class="row">
+  <div class="col-lg-12">
+    <%= form_with model: @comic do |f| %>
+      <div class="form-group row">
+        <label class="control-label col-sm-2">
+          <%= f.label :series_title %>  
+        </label>
+        <div class="col-sm-10">
+          <%= f.text_field :series_title, class: "form-control", placeholder: "Series Title" %>
+        </div>
+      </div>
+      <div class="form-group row">
+        <label class="control-label col-sm-2">
+          <%= f.label :issue_number %>  
+        </label>
+        <div class="col-sm-10">
+          <%= f.text_field :issue_number, class: "form-control", placeholder: "Issue Number" %>
+        </div>
+      </div>
+      <div class="form-group row">
+        <label class="control-label col-sm-2">
+          <%= f.label :issue_number %>  
+        </label>
+        <div class="col-sm-10">
+          <%= f.text_field :quantity_owned, class: "form-control", placeholder: "Quantity Owned" %>
+        </div>
+      </div>
+      <div class="form-group row">
+        <label class="control-label col-sm-2">
+          <%= f.label :condition %>  
+        </label>
+        <div class="col-sm-10">
+          <%= f.text_field :condition, class: "form-control", placeholder: "Condition" %>
+        </div>
+      </div>
+      
+      
+      <div class="form-group row">        
+        <label class="col-sm-2"><%= f.label :anonymous %></label>
+        <div class="col-sm-10">
+          <%= f.check_box :anonymous %>
+        </div>
+      </div>
 
-<br>
-<%= link_to "Back to comics", comics_path %> 
+      <div class="center">
+        <%= f.submit class: "btn btn-outline-dark btn-med" %>
+        <br><br>
+        <%= link_to "Back to comics", comics_path, class: "btn btn-light btn-med" %>
+      </div>
+
+    <% end %>
+      
+  </div>
+</div>
