--- a/app/views/comics/_form.html.erb
+++ b/app/views/comics/_form.html.erb
@@ -1,63 +1,52 @@
-<% if @comic.errors.any? %>
-  <h2>The following errors prevented the comic from getting created</h2>
-  <ul>
-    <% @comic.errors.full_messages.each do |msg| %>
-      <li><%= msg %></li>
-    <% end %> 
-  </ul>
-<% end %>
-
+<br>
+<%= render 'shared/errors', obj: @comic %>
+<br>
 <div class="row">
   <div class="col-lg-12">
-    <%= form_with model: @comic do |f| %>
+    <%= form_with model: @comic, local: true do |f| %>
       <div class="form-group row">
         <label class="control-label col-sm-2">
-          <%= f.label :series_title %>  
+          <%= f.label :series_title %>
         </label>
-        <div class="col-sm-10">
+        <div class="col-sm-8">
           <%= f.text_field :series_title, class: "form-control", placeholder: "Series Title" %>
         </div>
       </div>
       <div class="form-group row">
         <label class="control-label col-sm-2">
-          <%= f.label :issue_number %>  
+          <%= f.label :issue_number %>
         </label>
-        <div class="col-sm-10">
+        <div class="col-sm-8">
           <%= f.text_field :issue_number, class: "form-control", placeholder: "Issue Number" %>
         </div>
       </div>
       <div class="form-group row">
         <label class="control-label col-sm-2">
-          <%= f.label :issue_number %>  
+          <%= f.label :quantity_owned %>
         </label>
-        <div class="col-sm-10">
+        <div class="col-sm-8">
           <%= f.text_field :quantity_owned, class: "form-control", placeholder: "Quantity Owned" %>
         </div>
       </div>
       <div class="form-group row">
         <label class="control-label col-sm-2">
-          <%= f.label :condition %>  
+          <%= f.label :condition %>
         </label>
-        <div class="col-sm-10">
+        <div class="col-sm-8">
           <%= f.text_field :condition, class: "form-control", placeholder: "Condition" %>
         </div>
       </div>
-      
-      
-      <div class="form-group row">        
+      <div class="form-group row">
         <label class="col-sm-2"><%= f.label :anonymous %></label>
-        <div class="col-sm-10">
+        <div class="col-sm-8">
           <%= f.check_box :anonymous %>
         </div>
       </div>
-
       <div class="center">
         <%= f.submit class: "btn btn-outline-dark btn-med" %>
         <br><br>
         <%= link_to "Back to comics", comics_path, class: "btn btn-light btn-med" %>
       </div>
-
     <% end %>
-      
   </div>
 </div>
