--- a/app/views/layouts/_messages.html.erb
+++ b/app/views/layouts/_messages.html.erb
@@ -1,5 +1,8 @@
-<% flash.each do |name, msg| %>
-  <ul>
-    <li><%= msg %> 
-  </ul>
-<% end %>
+<div class="center">
+    <% flash.each do |name, msg| %>
+      <div class='alert alert-<%="#{name}" %>'>
+        <a href="#" class="close" data-dismiss="alert">×</a>  
+        <%= content_tag :div, msg, :id => "flash_#{name}" if msg.is_a?(String) %> 
+      </div>
+    <% end %>
+</div>
