--- a/app/views/comics/index.html.erb
+++ b/app/views/comics/index.html.erb
@@ -1,9 +1,3 @@
 <h1 class="comic-font center">All Comics</h1>
 
-<p><%= link_to "Create a Comic", new_comic_path %></p>
-
-<% @comics.each do |comic| %>
-  <p><%= comic.series_title %> | <%= link_to comic.issue_number, comic_path(comic) %> </p>
-  <p><%= link_to 'Edit', edit_comic_path(comic) %> | <%= link_to 'Delete', comic_path(comic), method: :delete, data: {confirm: "are you sure you want to delete this comic?"} %></p>
-  <br>
-<% end %> 
+<%= render 'comic', comic: @comics %>
