--- a/app/views/comics/_comic.html.erb
+++ b/app/views/comics/_comic.html.erb
@@ -2,6 +2,11 @@
   <div class="card bg-light border-light col-xs-8 col-xs-offset-2">        
     <p>Series Title: <%= comic.series_title %></p>
     <p>Issue Number: <%= link_to comic.issue_number, comic_path(comic) %></p>
+    <div class="comic-meta-details">
+      <small><strong>Created by: </strong><%= comic.user.username if comic.user %>,
+            <%= comic.created_at.strftime("%m-%d-%Y") %>,
+            <strong>Last updated: </strong><%= time_ago_in_words(comic.updated_at) %> ago</small>
+    </div>
     <div class="center">
       <%= link_to 'Edit', edit_comic_path(comic), class: "btn btn-outline-dark" %>
       <%= link_to 'Delete', comic_path(comic), method: :delete, data: {confirm: "are you sure you want to delete this comic?"}, class: "btn btn-outline-danger" %></td> 
