--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -1,7 +1,8 @@
+
 <div class="center jumbotron">
   <h2 class="comic-font"> Comic Book Room</h2>
   <br><br>
-  <%= link_to 'Log In', root_path, class: "btn btn-outline-dark btn-lg" %>
+  <%= link_to 'Log In', login_path, class: "btn btn-outline-dark btn-lg" %>
   <br><br>
-  <%= link_to 'Sign Up', root_path, class: "btn btn-outline-dark btn-lg" %>
+  <%= link_to 'Sign Up', signup_path, class: "btn btn-outline-dark btn-lg" %>
 </div>
