--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,1 +1,12 @@
 <h1 class="center comic-font">All Users</h1>
+
+<% @users.each do |user| %>
+  <div class="card bg-light border-light col-xs-8 col-xs-offset-2">        
+    <p><strong>Username: </strong><%= link_to user.username, user_path(user) %></p>
+    <p><strong>Collection: </strong><%= pluralize(user.comics.count, "comic") if user.comics %></p>
+    <div class="center">
+      
+    </div>
+  </div>
+  <br>
+<% end %> 
