--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,55 +1,45 @@
-<br>
+<div class="jumbotron">
+  <h2 class="center comic-font"><%= @user.new_record? ? 'Sign Up' : 'Update Account' %></h2>
 <%= render 'shared/errors', obj: @user %>
 <br>
-<div class="row">
-  <div class="col-lg-12">
-    <%= form_with model: @user, local: true do |f| %>
-      <div class="form-group row">
-        <label class="control-label col-sm-2">
-          <%= f.label :username %>
-        </label>
-        <div class="col-sm-8">
-          <%= f.text_field :username, class: "form-control", placeholder: "Enter Username" %>
-        </div>
-      </div>
-      <div class="form-group row">
-        <label class="control-label col-sm-2">
-          <%= f.label :name %>
-        </label>
-        <div class="col-sm-8">
-          <%= f.text_field :name, class: "form-control", placeholder: "Enter Name" %>
-        </div>
-      </div>
-      <div class="form-group row">
-        <label class="control-label col-sm-2">
-          <%= f.label :email %>
-        </label>
-        <div class="col-sm-8">
-          <%= f.email_field :email, class: "form-control", placeholder: "Enter Email Address" %>
-        </div>
-      </div>
-      <div class="form-group row">
-        <label class="control-label col-sm-2">
-          <%= f.label :password %>
-        </label>
-        <div class="col-sm-8">
-          <%= f.password_field :password, class: "form-control", placeholder: "Enter Password" %>
-        </div>
-      </div>
-      <div class="form-group row">
-        <label class="control-label col-sm-2">
-          <%= f.label :password_confirmation %>
-        </label>
-        <div class="col-sm-8">
-          <%= f.password_field :password_confirmation, class: "form-control", placeholder: "Enter Email Address" %>
-        </div>
-      </div>
-    
-      <div class="center">
-        <%= f.submit (@user.new_record? ? 'Sign Up' : 'Update Account'), class: "btn btn-outline-dark btn-med" %>
-        <br><br>
-        <%= link_to "Back to Comics", comics_path, class: "btn btn-light btn-med" %>
-      </div>
-    <% end %>
+<%= form_with model: @user, local: true do |f| %>
+  <div class="form-group row">
+    <label class="control-label col-sm-2">
+      <%= f.label :username %>
+    </label>
+    <div class="col-sm-8">
+      <%= f.text_field :username, class: "form-control", placeholder: "Enter Username" %>
+    </div>
   </div>
+  <div class="form-group row">
+    <label class="control-label col-sm-2">
+      <%= f.label :name %>
+    </label>
+    <div class="col-sm-8">
+      <%= f.text_field :name, class: "form-control", placeholder: "Enter Name" %>
+    </div>
+  </div>
+  <div class="form-group row">
+    <label class="control-label col-sm-2">
+      <%= f.label :email %>
+    </label>
+    <div class="col-sm-8">
+      <%= f.email_field :email, class: "form-control", placeholder: "Enter Email Address" %>
+    </div>
+  </div>
+  <div class="form-group row">
+    <label class="control-label col-sm-2">
+      <%= f.label :password %>
+    </label>
+    <div class="col-sm-8">
+      <%= f.password_field :password, class: "form-control", placeholder: "Enter Password" %>
+    </div>
+  </div>
+  <div class="center">
+    <%= f.submit (@user.new_record? ? 'Sign Up' : 'Update Account'), class: "btn btn-outline-dark btn-sm" %>
+    <br><br>
+    <%= link_to "Back to Home", root_path, class: "btn btn-light btn-sm" %>
+  </div>
+<% end %>
+
 </div>
