--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -6,19 +6,30 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <%= link_to 'Comics', comics_path, class: "nav-link" %>
-      </li>
-      <li class="nav-item">
-        <%= link_to 'Create Comic', new_comic_path, class: "nav-link" %>
-      </li>
-      <li class="nav-item">
-        <%= link_to 'Log Out', logout_path, method: :delete, class: "nav-link" %>
-      </li>
+      <% if logged_in? %>
+        <li class="nav-item">
+          <%= link_to 'Comics', comics_path, class: "nav-link" %>
+        </li>
+        <li class="nav-item">
+          <%= link_to 'Create Comic', new_comic_path, class: "nav-link" %>
+        </li>
+        <li>
+          <%= link_to 'Log Out', logout_path, method: :delete, class: "nav-link" %>
+        </li>
+      <% else %> 
+        <li>
+          <%= link_to 'Log in', login_path, class: "nav-link" %>
+        </li>
+        <li>
+          <%= link_to 'Sign Up', signup_path, class: "nav-link" %>
+        </li>
+      <% end %> 
     </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
+    <% if logged_in? %>
+      <form class="form-inline my-2 my-lg-0">
+        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+      </form>
+    <% end %> 
   </div>
 </nav>
