--- a/app/views/comics/_comic.html.erb
+++ b/app/views/comics/_comic.html.erb
@@ -7,10 +7,12 @@
             <%= comic.created_at.strftime("%m-%d-%Y") %>,
             <strong>Last updated: </strong><%= time_ago_in_words(comic.updated_at) %> ago</small>
     </div>
-    <div class="center">
-      <%= link_to 'Edit', edit_comic_path(comic), class: "btn btn-outline-dark" %>
-      <%= link_to 'Delete', comic_path(comic), method: :delete, data: {confirm: "are you sure you want to delete this comic?"}, class: "btn btn-outline-danger" %></td> 
-    </div>
+    <% if logged_in? && current_user == comic.user %> 
+          <div class="center">
+            <%= link_to 'Edit', edit_comic_path(comic), class: "btn btn-outline-dark" %>
+            <%= link_to 'Delete', comic_path(comic), method: :delete, data: {confirm: "are you sure you want to delete this comic?"}, class: "btn btn-outline-danger" %> 
+          </div>
+        <% end %> 
   </div>
   <br>
 <% end %> 
