--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -7,29 +7,44 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <% if logged_in? %>
-        <li class="nav-item">
-          <%= link_to 'Comics', comics_path, class: "nav-link" %>
-        </li>
-        <li class="nav-item">
-          <%= link_to 'Create Comic', new_comic_path, class: "nav-link" %>
-        </li>
-        <li>
-          <%= link_to 'Log Out', logout_path, method: :delete, class: "nav-link" %>
-        </li>
-      <% else %> 
-        <li>
-          <%= link_to 'Log in', login_path, class: "nav-link" %>
-        </li>
-        <li>
-          <%= link_to 'Sign Up', signup_path, class: "nav-link" %>
-        </li>
+
+      <!-- split comic button -->
+
+        <div class="btn-group ml-1">
+          <%= link_to "Comics", comics_path, class: "btn btn-secondary" %>
+          <button type="button" class="btn btn-outline-dark dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <span class="sr-only">Toggle Dropdown</span>
+          </button>
+          <div class="dropdown-menu">
+            <%= link_to 'Create Comic', new_comic_path, class: "nav-link" %>
+          </div>
+        </div>
+      
+      <!-- split profile button -->
+
+        <div class="btn-group ml-1">
+          <%= link_to "Your Profile", user_path(current_user), class: "btn btn-secondary" %>
+          <button type="button" class="btn btn-outline-dark dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <span class="sr-only">Toggle Dropdown</span>
+          </button>
+          <div class="dropdown-menu">
+            <%= link_to 'Edit Your Profile', edit_user_path(current_user), class: "nav-link" %>
+            <%= link_to 'All Profiles', comics_path, class: "nav-link" %>
+            <div class="dropdown-divider"></div>
+            <%= link_to 'Log Out', logout_path, method: :delete, class: "nav-link" %>
+          </div>
+        </div>
       <% end %> 
+
+      <!-- search --> 
+
+      <% if logged_in? %>
+        <form class="form-inline ml-1 my-2 my-lg-0">
+          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        </form>
+      <% end %> 
+
     </ul>
-    <% if logged_in? %>
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-      </form>
-    <% end %> 
   </div>
 </nav>
