--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -29,7 +29,7 @@
           </button>
           <div class="dropdown-menu">
             <%= link_to 'Edit Your Profile', edit_user_path(current_user), class: "nav-link" %>
-            <%= link_to 'All Profiles', comics_path, class: "nav-link" %>
+            <%= link_to 'All Profiles', users_path, class: "nav-link" %>
             <div class="dropdown-divider"></div>
             <%= link_to 'Log Out', logout_path, method: :delete, class: "nav-link" %>
           </div>
