--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,3 @@
-<h1 class="center comic-font">Welcome <%= @user.username %></h1> 
+<h1 class="center comic-font"><%= @user.username %></h1>
 
 <%= render '/comics/comic', comic: @user_comics %>
