--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,25 +1,28 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <%= link_to "Comic Book Room", root_path, class: "comic-font navbar-brand" %>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+
+  <% if !logged_in? %>
+    <%= link_to "Comic Book Room", root_path, class: "comic-font navbar-brand" %>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+  <% else %>
+    <%= link_to "Comic Book Room", comics_path, class: "comic-font navbar-brand" %>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+  <% end %>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <% if logged_in? %>
 
-      <!-- split comic button -->
+        <li class="nav-item">
+          <%= link_to 'Publishers', publishers_path, class: "nav-link" %>
+        </li>
+        <li class="nav-item">
+          <%= link_to 'Create Comic', new_comic_path, class: "nav-link" %>
+        </li>
 
-        <div class="btn-group ml-1">
-          <%= link_to "Comics", comics_path, class: "btn btn-secondary" %>
-          <button type="button" class="btn btn-outline-dark dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <span class="sr-only">Toggle Dropdown</span>
-          </button>
-          <div class="dropdown-menu">
-            <%= link_to 'Create Comic', new_comic_path, class: "nav-link" %>
-          </div>
-        </div>
-      
       <!-- split profile button -->
 
         <div class="btn-group ml-1">
@@ -35,16 +38,6 @@
           </div>
         </div>
       <% end %> 
-
-      <!-- search --> 
-
-      <% if logged_in? %>
-        <form class="form-inline ml-1 my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
-      <% end %> 
-
     </ul>
   </div>
 </nav>
