--- a/app/views/comics/index.html.erb
+++ b/app/views/comics/index.html.erb
@@ -3,5 +3,5 @@
   <%= link_to "New Comic", new_comic_path, class: "btn btn-light btn-med" %>
 </div>
 <br>
-<%= render 'comic', comic: @comics %>
+<%= render 'comic', comic: @comics, series: @series %>
 
