--- a/app/views/comics/show.html.erb
+++ b/app/views/comics/show.html.erb
@@ -1,5 +1,6 @@
 <br>
-<h2 class="center comic-font"><%= @comic.issue_number %></h2>
+<h2 class="center comic-font"><%= @comic.series.title %></h2>
+<h4 class="center comic-font">Issue: <%= @comic.issue_number %></h4>
 <br>
 <div class="card bg-light border-light col-xs-8 col-xs-offset-2" >
   <br>
