--- a/app/views/publishers/index.html.erb
+++ b/app/views/publishers/index.html.erb
@@ -13,7 +13,7 @@
 </div> 
 <br>
 <div class="center"> 
-  <%= link_to "Back to Comics", comics_path, class: "btn btn-light btn-med" %>
+  <%= link_to 'Back to Comics Index', comics_path, class: "btn btn-light btn-med" %>
 </div>
 
 
