--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -13,9 +13,8 @@
   <% end %>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <% if logged_in? %>
-
+    <% if logged_in? %>
+      <ul class="navbar-nav">
         <li class="nav-item">
           <%= link_to 'Comics', comics_path, class: "nav-link" %>
         </li>
@@ -23,16 +22,15 @@
           <%= link_to 'Create Comic', new_comic_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
-          <%= link_to 'Series', series_index_path, class: "nav-link" %>
+          <%= link_to 'Series', publishers_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
           <%= link_to 'Publishers', publishers_path, class: "nav-link" %>
         </li>
+      </ul>
 
-      <!-- split profile button -->
-
-        <div class="btn-group ml-1">
-          <%= link_to "Your Profile", user_path(current_user), class: "btn btn-secondary" %>
+      <div class="btn-group nav navbar-nav ml-auto">
+        <%= link_to "Your Profile", user_path(current_user), class: "btn btn-secondary" %>
           <button type="button" class="btn btn-outline-dark dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <span class="sr-only">Toggle Dropdown</span>
           </button>
@@ -42,8 +40,7 @@
             <div class="dropdown-divider"></div>
             <%= link_to 'Log Out', logout_path, method: :delete, class: "nav-link" %>
           </div>
-        </div>
-      <% end %> 
-    </ul>
+      </div>
+    <% end %> 
   </div>
 </nav>
