--- a/app/views/series/new.html.erb
+++ b/app/views/series/new.html.erb
@@ -12,9 +12,21 @@
       <%= f.text_field :title, class: "form-control", placeholder: "Series title"%>
     </div>
   </div>
+
+  <div class="form-group row">
+    <div class="control-label col-sm-2">
+      <%= f.label :publishers %>
+    </div>
+    <div class="col-sm-8">
+      <%= f.collection_check_boxes(:publisher_ids, Publisher.all.select { |publisher| !publisher[:name].blank? }, :id, :name) do |c| %>
+        <%=c.check_box%> <%=c.text %> <br>
+      <% end %>
+    </div>
+  </div>
+
   <div class="center">
     <%= f.submit class: "btn btn-outline-dark btn-med" %>
     <br><br>
-    <%= link_to "Back to Comics", comics_path, class: "btn btn-light btn-med" %>
+    <%= link_to "Back to Series", series_index_path, class: "btn btn-light btn-med" %>
   </div>
 <% end %>
