--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -22,7 +22,7 @@
           <%= link_to 'Create Comic', new_comic_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
-          <%= link_to 'Series', publishers_path, class: "nav-link" %>
+          <%= link_to 'Series', series_index_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
           <%= link_to 'Publishers', publishers_path, class: "nav-link" %>
