--- a/app/views/comics/_comic.html.erb
+++ b/app/views/comics/_comic.html.erb
@@ -1,6 +1,6 @@
 <% comic.each do |comic| %>
   <div class="card bg-light border-light col-xs-8 col-xs-offset-2">        
-    <p><strong>Series Title: </strong><%= comic.series.title %></p>
+    <p><strong>Series Title: </strong><%= comic.series_title %></p>
     <p><strong>Issue Number: </strong><%= link_to comic.issue_number, comic_path(comic) %></p>
     <div class="comic-meta-details">
       <% if comic.anonymous == false %>
