update button on all comments index page

--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -20,6 +20,6 @@
   <% end %> 
 
   <div class="center">
-    <%= link_to 'Back to Comics Index', comics_path, class: "btn btn-light btn-med"%>
+    <%= link_to "Return to comic", comic_path(@comic), class: "btn btn-light btn-sm" %>
     <br>
   </div>
