--- a/app/views/shared/_errors.html.erb
+++ b/app/views/shared/_errors.html.erb
@@ -1,7 +1,7 @@
 <% if obj.errors.any? %> 
   <div class="card text-danger border-danger mb-3 center">
     <div class="card-header">
-      <h2> The following errors prohibited this comic from being saved:</h2>
+      <h2> The following errors occurred:</h2>
     </div>
     <div class="card-body">
       <div class="card-text">
